Grading Support: Positive Feedbacks (#226)
* Reworked deserialize / serialize mechanisms

* Make id unique

* Reworked calculation of Penalties

Breaking Change: Rating Groups:

{
            "shortName": "style",
            "displayName": "Programmierstil",
            "negativeLimit": -7,
            "positiveLimit": null
        }

* Update bundles/edu.kit.kastel.sdq.eclipse.grading.view/src/edu/kit/kastel/eclipse/grading/view/assessment/CustomButtonDialog.java

Co-authored-by: Maximilian Walter <maximilian.walter@kit.edu>

* Add positiveFeedbackAllowed option

* Added trim to username, password, and hostname

* !Trim for Password

* Added missing equals / hashCode methods.

* Fixed loading of ConfigDAO

Co-authored-by: Maximilian Walter <maximilian.walter@kit.edu>